[package]
name = "twap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
thiserror = { version = "1.0.31" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }