[package]
name = "twap"
version = "0.1.0"
authors = ["Matt <matt@osmosis.team>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
osmo-bindings = { version = "0.6.0", path = "../../packages/bindings" }
cw2 = "0.15"
thiserror = "1.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
cw-multi-test = "0.15"
osmo-bindings-test = { version = "0.6.0", path = "../../packages/bindings-test" }
